Fixed - Date and time option alignment

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1324,8 +1324,13 @@ body.everest-forms-builder-setup,
 						.everest-forms-border-container {
 							.everest-forms-field-option-row {
 								&.everest-forms-field-option-row-date_format {
-									.inline {
-										margin-right: 15px;
+									> .inline {
+										margin-left: 0;
+										margin-right: 10px;
+
+										&:last-child {
+											margin-right: 0;
+										}
 									}
 								}
 
